--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ transition-delay:.2s;
         <img class="img-responsive" src="{{ photo.image_path }}" alt="">
         <div class="overlay">
            <h2>{{ photo.title }}</h2>
-           <a class="info" href="#">link here</a>
+           <a class="info" href="{{ photo.url }}">View Album</a>
         </div>
     </div>
   
